--- a/css/main.css
+++ b/css/main.css
@@ -74,9 +74,13 @@ form {
   flex-wrap: wrap;
 }
 
+main .container a {
+  text-decoration: none;
+  margin: 1rem 0;
+}
+
 .movie {
-  width: 300px;
-  margin: 1rem;
+  width: 280px;
   border-radius: 3px;
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
   background-color: var(--secondaryColor);
@@ -102,6 +106,10 @@ form {
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 1rem;
+}
+
+.movieInfo h3 {
+  font-size: 15px;
 }
 
 .movieInfo span {
@@ -134,6 +142,22 @@ form {
   transition: 0.5s ease;
   height: 50%;
   overflow-y: scroll;
+}
+
+.overview::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+.overview::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+.overview::-webkit-scrollbar-thumb {
+  background: rgb(55, 0, 255);
+  border-radius: 10px;
 }
 
 .movie:hover > .overview {
