--- a/css/main.css
+++ b/css/main.css
@@ -162,3 +162,10 @@ header .container {
   }
 
 }
+
+@media screen and (max-width:260px) {
+  .search {
+    width: 100px !important;
+    background-color: red;
+  }
+}
