--- a/css/movies.css
+++ b/css/movies.css
@@ -4,3 +4,33 @@
     //   ${overview}
     // </div>
 */
+
+.navBar a {
+  color: rgb(255, 208, 0);
+  text-decoration: none;
+  position: relative;
+  padding-bottom: 10px;
+}
+
+.navBar a::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 3px;
+  background-color: rgb(255, 208, 0);
+  transition: 0.4s linear;
+}
+
+.navBar a:hover::before {
+  width: 100%;
+  transition: 0.4s linear;
+}
+
+.mainInfo {
+  width: 100%;
+  height: 600px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
