--- a/css/movies.css
+++ b/css/movies.css
@@ -12,6 +12,31 @@
   padding-bottom: 10px;
 }
 
+.mainOfInfo {
+  height: 600px;
+  width: 100%;
+}
+
+.mainInfo {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.mainInfo::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg,#4a0b89,rgba(74,11,137,.671));
+  top: 0;
+  left: 0;
+}
+
 .navBar a::before {
   content: '';
   position: absolute;
@@ -28,9 +53,121 @@
   transition: 0.4s linear;
 }
 
-.mainInfo {
-  width: 100%;
-  height: 600px;
-  background-size: cover;
-  background-repeat: no-repeat;
+.mainInfo .container {
+  display: flex;
 }
+
+.mainInfo img {
+    position: relative;
+    z-index: 100;
+    width: 300px;
+    height: 450px;
+}
+
+.mainInfo .textInfo {
+  position: relative;
+  z-index: 100;
+  color: #fff;
+  margin-left: 20px;
+}
+
+
+.moreInfo p {
+  margin: 10px 15px;
+}
+
+.moreInfo span {
+  padding: 3px;
+  border-radius: 7px;
+  background-color: rgb(245, 229, 0);
+  color: #4a0b89;
+  font-weight: 900;
+}
+
+.textInfo h1 {
+  margin-bottom: 10px;
+}
+
+.textInfo h3 {
+  margin: 10px 0;
+}
+
+.watchBtn {
+  display: flex;
+  align-items: center;
+  background-color: rgb(255, 208, 0);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #4a0b89;
+  font-size: 20px;
+  font-weight: 900;
+}
+
+.moreInfo {
+  display: flex;
+  align-items: center;
+}
+
+.overviewText {
+  text-align: justify;
+}
+
+.watchBtn svg {
+  width: 35px;
+  margin-right: 10px;
+  fill: #4a0b89;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:885px) {
+
+  .mainOfInfo {
+    height: auto !important;
+  }
+
+  .textInfo {
+    margin: 0 !important;
+  }
+
+  .textInfo h1, h3 {
+    text-align: center;
+  }
+
+  .genre, .date {
+    margin: 10px 5px !important;
+  }
+
+  .moreInfo {
+    justify-content: center;
+  }
+
+  .response {
+    flex-direction: column !important;
+    align-items: center;
+  }
+
+  .btnBlock {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+}
+
