--- a/css/movies.css
+++ b/css/movies.css
@@ -1,10 +1,3 @@
-/*
-   // <div class="overview">
-    //   <h3>Overview</h3>
-    //   ${overview}
-    // </div>
-*/
-
 .navBar a {
   color: rgb(255, 208, 0);
   text-decoration: none;
@@ -72,8 +65,23 @@
 }
 
 
+.moreInfo {
+  display: flex;
+  align-items: flex-start !important;
+  flex-direction: column;
+}
+
 .moreInfo p {
   margin: 10px 15px;
+}
+
+.genreDiv {
+  display: flex;
+  align-items: center;
+}
+
+.genreDiv p {
+  margin: 7px;
 }
 
 .moreInfo span {
@@ -120,24 +128,27 @@
   fill: #4a0b89;
 }
 
+.date {
+  margin: 15px 0 !important;
+}
+
+.whiteSpan {
+  color: #fff !important;
+  background-color: transparent !important;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+}
+
+.flex span:nth-of-type(1) {
+  margin-right: 10px;
+}
+
 .genre {
   word-spacing: 10px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 @media screen and (max-width:885px) {
 
@@ -172,6 +183,22 @@
     justify-content: center;
   }
 
+  .textInfo h1 {
+    font-size: 22px;
+    margin-top: 5px;
+  }
+
+}
+
+@media screen and (max-width:670px) {
+  .genreDiv {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .genreDiv  p {
+    margin: 3px 0;
+  }
 }
 
 @media screen and (max-width:340px) {
