--- a/css/movies.css
+++ b/css/movies.css
@@ -150,6 +150,59 @@
   word-spacing: 10px;
 }
 
+.topText {
+  margin-top: 10px;
+  font-size: 25px;
+  color: #fff;
+
+}
+
+.actorMain {
+  width: 100%;
+  overflow: hidden;
+}
+
+.actorBlock {
+  display: flex;
+  align-items: flex-start;
+  overflow-x: scroll;
+  padding: 10px 0 30px 0;
+}
+
+.actorBlock::-webkit-scrollbar {
+  width: 11px;
+  height: 10px;
+}
+
+/* Track */
+.actorBlock::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  height: 10px;
+  border-radius: 10px;
+}
+
+/* Handle */
+.actorBlock::-webkit-scrollbar-thumb {
+  background: rgb(255, 208, 0);
+  border-radius: 10px;
+}
+
+.actorBox {
+  width: 200px;
+  margin: 5px;
+}
+
+.actorBox img {
+  width: 120px;
+  height: 200px;
+}
+
+.actorBox h3 {
+  color: #fff;
+  font-size: 12px;
+  font-weight: 500;
+}
+
 @media screen and (max-width:885px) {
 
   .mainOfInfo {
