new size of card

--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,12 @@ form {
   width: 240px;
 }
 
+.movie img {
+  width: 250px;
+  height: 300px;
+  object-fit: cover;
 
+}
 
 .search {
   width: 100%;
