correct background photo

--- a/css/movies.css
+++ b/css/movies.css
@@ -254,6 +254,10 @@
 
 @media screen and (max-width:885px) {
 
+  .mainInfo {
+    background-position: center;
+  }
+
   .mainOfInfo {
     height: auto !important;
   }
