--- a/css/movies.css
+++ b/css/movies.css
@@ -18,6 +18,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  z-index: 1;
 }
 
 .mainInfo::after {
@@ -253,6 +254,58 @@
 }
 
 
+/* The Overlay (background) */
+.overlay {
+   height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 100; 
+  left: 0;
+  top: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9); 
+  overflow-x: hidden;
+  transition: 0.5s; 
+}
+
+.overlay-content {
+  position: relative;
+  top: 25%; 
+  width: 100%; 
+  text-align: center; 
+  margin-top: 30px;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block; 
+  transition: 0.3s; 
+}
+
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
+}
+
+
 @media screen and (max-width:885px) {
 
   .mainInfo {
@@ -317,6 +370,14 @@
   }
 
 
+}
+
+.embed.hide {
+  display: none;
+}
+
+.embed.show {
+  display: inline-block;
 }
 
 /* created by Akobir Toshtemirov */
