--- a/css/movies.css
+++ b/css/movies.css
@@ -26,7 +26,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(90deg,#4a0b89,rgba(74,11,137,.671));
+  background: linear-gradient(90deg,#150075ce,rgba(2, 0, 139, 0.829));
   top: 0;
   left: 0;
 }
