--- a/css/movies.css
+++ b/css/movies.css
@@ -448,23 +448,20 @@
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
-}
-
-.swiper-pagination-bullet {
-  width: 20px;
-  height: 20px;
+}.swiper-pagination-bullet {
+  width: 20px !important;
+  height: 20px !important;
   text-align: center;
   line-height: 20px;
   font-size: 12px;
-  color: #000;
+  color: #000 !important;
   opacity: 1;
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(182, 182, 182, 0.603) !important;
 }
 
 .swiper-pagination-bullet-active {
-  color: #fff;
-  background: #007aff;
+  color: #fff !important;
+  background: #007aff !important;
 }
-
 
 /* created by Akobir Toshtemirov */
