--- a/css/movies.css
+++ b/css/movies.css
@@ -294,6 +294,48 @@
   font-size: 60px;
 }
 
+
+
+.swiper {
+  width: 100%;
+  height: 100%;
+  
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}.swiper-pagination-bullet {
+  width: 20px !important;
+  height: 20px !important;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  color: #000 !important;
+  opacity: 1;
+  background: rgba(182, 182, 182, 0.603) !important;
+}
+
+.swiper-pagination-bullet-active {
+  color: #fff !important;
+  background: #007aff !important;
+}
+
+
 @media screen and (max-height: 450px) {
   .overlay a {font-size: 20px}
   .overlay .closebtn {
@@ -360,6 +402,10 @@
     font-size: 13px;
     text-align: justify;
   }
+
+  .swiper-slide iframe {
+    width: 80%;
+  }
 }
 
 @media screen and (max-width:340px) {
@@ -369,99 +415,4 @@
 
 
 }
-
-.embed.hide {
-  display: none;
-}
-
-.embed.show {
-  display: inline-block;
-}
-
-.arrow {
-  position: absolute;
-  cursor: pointer;
-}
-
-.left_arrow {
-  left: 10%;
-}
-
-.right_arrow {
-  right: 10%;
-}
-
-.current {
-  color: #fff;
-  padding: 10px 20px;
-  border-radius: 50%;
-  border: 5px solid orange;
-  font-size: 20px;
-  font-weight: 600;
-}
-
-.dots {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 95%;
-  margin: 0 auto;
-}
-
-.dots .dot {
-  color: #fff;
-  padding: 5px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  border: 5px solid rgb(41, 19, 241);
-  font-size: 20px;
-  font-weight: 600;
-  margin: 5px;
-}
-
-.dots .dot.active {
-  border-color: orangered;
-}
-
-
-.swiper {
-  width: 100%;
-  height: 100%;
-  
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}.swiper-pagination-bullet {
-  width: 20px !important;
-  height: 20px !important;
-  text-align: center;
-  line-height: 20px;
-  font-size: 12px;
-  color: #000 !important;
-  opacity: 1;
-  background: rgba(182, 182, 182, 0.603) !important;
-}
-
-.swiper-pagination-bullet-active {
-  color: #fff !important;
-  background: #007aff !important;
-}
-
 /* created by Akobir Toshtemirov */
