--- a/css/main.css
+++ b/css/main.css
@@ -228,7 +228,9 @@ main .container a {
 }
 #tags .tag {
   margin: 5px;
-  padding: 5px 10px;
+  padding: 5px 0;
+  width: 135px;
+  text-align: center;
   color: #22254b;
   background-color: rgb(255, 208, 0);
   border-radius: 17px;
