--- a/css/main.css
+++ b/css/main.css
@@ -264,6 +264,46 @@ main .container a {
 }
 }
 
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 40px 0;
+  font-size: 22px;
+}
+
+.page {
+  margin: 0 40px;
+  color: rgb(255, 208, 0);
+  transition: 0.4s ease;
+}
+
+.page:hover {
+  color: rgb(255, 94, 0);
+  cursor: pointer;
+  transition: 0.4s ease;
+}
+
+.current {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  border: 3px solid rgb(255, 208, 0);
+  color: rgb(255, 94, 0);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.disabled {
+  color: grey;
+  cursor: default !important;
+}
+
+.disabled:hover {
+  color: grey !important;
+}
+
 @media screen and (max-width:1200px) {
   .container {
     width: 100%;
