--- a/css/main.css
+++ b/css/main.css
@@ -158,36 +158,6 @@ main .container a {
   color: orange;
 }
 
-.overview {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background-color: #fff;
-  color: #000;
-  padding: 0.5rem 1rem;
-  max-height: 100%;
-  transform: translateY(100%);
-  transition: 0.5s ease;
-  height: 50%;
-  overflow-y: scroll;
-}
-
-.overview::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-.overview::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
-}
-
-/* Handle */
-.overview::-webkit-scrollbar-thumb {
-  background: rgb(38, 0, 255);
-  border-radius: 10px;
-}
-
 .movie:hover > .overview {
   transform: translateY(0);
   transition: 0.5s ease;
@@ -327,6 +297,14 @@ main .container a {
   .movie img {
     height: 270px;
   }
+
+  /* .movieInfo {
+    height: 55px;
+  }
+
+  .movieInfo h3 {
+    font-size: 12px;
+  } */
 }
 
 
@@ -369,6 +347,14 @@ main .container a {
     object-fit: cover;
   }
 
+  #prev {
+    margin-left: 0;
+  }
+
+  #next {
+    margin-right: 0;
+  }
+
 }
 
 @media screen and (max-width:365px) {
@@ -383,6 +369,19 @@ main .container a {
 
   .movie img {
     height: 300px;
+  }
+
+  #prev {
+    margin-right: 20px;
+  }
+
+  #next {
+    margin-left: 20px;
+  }
+
+  .current {
+    width: 35px;
+    height: 35px;
   }
 
 }
