--- a/css/main.css
+++ b/css/main.css
@@ -35,8 +35,18 @@ body::-webkit-scrollbar-thumb {
 
 
 header {
+  width: 100%;
   padding: 0.5rem;
   background-color: var(--secondaryColor);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 50;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.514);
+}
+
+.mainElem {
+  margin-top: 95px;
 }
 
 .container {
@@ -313,6 +323,62 @@ main .container a {
     width: 80%;
   }
 }
+
+.humburger .menuBtn {
+  border: none ;
+  background-color: transparent;
+}
+
+.menuBtn img {
+  width: 35px;
+  height: 35px;
+}
+
+@media screen and (max-width:730px) {
+  .resTag {
+    top: 0;
+    left: 0;
+    position: fixed;
+    width: 46%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.637);
+    z-index: 100;
+    padding: 10px 0;
+    overflow-y: scroll;
+    transform: translateX(-100%);
+    transition: 0.5s ease-in-out;
+  }
+
+  .resTag .tag {
+    width: 100% !important;
+    border-radius: 0 !important;
+    background-color: transparent !important;
+    color: #fff !important;
+    transform: 0.4s ease !important;
+    text-align: left !important;
+    padding-left: 20px !important;
+  }
+
+  .resTag .tag:hover {
+    box-shadow: none !important;
+  }
+
+  .resTag .tag:active {
+    background-color: rgba(255, 255, 255, 0.404) !important;
+    transform: 0.4s ease !important;
+  }
+
+  .newResTag {
+    transform: translateX(0);
+    transition: 0.5s ease-in-out;
+  }
+
+  .mainElem {
+    margin-top: 50px;
+  }
+ 
+}
+
 
 @media screen and (max-width:665px) {
   .container {
