--- a/css/movies.css
+++ b/css/movies.css
@@ -13,6 +13,7 @@
 .mainInfo {
   width: 100%;
   height: 100%;
+  margin-top: 70px;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
