--- a/css/main.css
+++ b/css/main.css
@@ -358,7 +358,7 @@ main .container a {
   }
 
   .resTag .tag {
-    width: 100% !important;
+    width: 95% !important;
     border-radius: 0 !important;
     background-color: transparent !important;
     color: #fff !important;
@@ -388,7 +388,16 @@ main .container a {
   .humburger {
     display: block !important;
   }
- 
+
+  .tag.highlight {
+    background-color: rgba(255, 255, 255, 0.486) !important;
+  }
+
+  .tag.highlightClear {
+    color: rgb(229, 255, 0) !important;
+    text-shadow: 0 0 25px rgb(255, 102, 0);
+    border: 1px solid red;
+  }
 }
 
 
