--- a/css/movies.css
+++ b/css/movies.css
@@ -267,7 +267,7 @@
 /* The Overlay (background) */
 .overlay {
    height: 100%;
-  width: 0;
+  width: 100%;
   position: fixed;
   z-index: 100; 
   left: 0;
@@ -275,7 +275,25 @@
   background-color: rgb(0,0,0);
   background-color: rgba(0,0,0, 0.9); 
   overflow-x: hidden;
-  transition: 0.5s; 
+  /* visibility: hidden;
+  opacity: 0;
+  transition: 0.5s;  */
+  display: none;
+}
+
+.overlay iframe {
+  display: none;
+}
+
+.openOverlay {
+  /* visibility: visible;
+  opacity: 1;
+  transition: 0.5s;  */
+  display: block;
+}
+
+.openOverlay iframe {
+  display: block;
 }
 
 .overlay-content {
