--- a/css/main.css
+++ b/css/main.css
@@ -59,14 +59,17 @@ header .container {
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .logo {
-  width: 70px;
+  width: 100px;
 }
 
 .logo img {
   width: 100%;
+  height: 70px;
 }
 
 form {
@@ -353,6 +356,7 @@ main .container a {
   display: none;
 }
 
+
 .selectionOf {
   width: 100%;
   margin: 0 0 10px 20px;
@@ -360,6 +364,12 @@ main .container a {
   color: rgb(255, 208, 0);
   
 }
+
+.removePagination {
+  display: none;
+}
+
+
 @media screen and (max-width:730px) {
   .resTag {
     top: 0;
