--- a/css/main.css
+++ b/css/main.css
@@ -466,7 +466,6 @@ main .container a {
 
   header .container {
     padding: 0 10px;
-    padding-top: 5px !important;
   }
   .movie img {
     height: 350px;
@@ -483,14 +482,18 @@ main .container a {
 
 }
 
-@media screen and (max-width:365px) {
-  .logo a img {
-    width: 70px;
-    height: 55px;
-  }
-
+@media screen and (max-width:400px) {
   form {
     width: 170px;
+  }
+}
+
+@media screen and (max-width:365px) {
+  .logo {
+    width: 75px;
+  }
+  .logo a img {
+    width: 100%;
   }
 
   .movie img {
