--- a/css/main.css
+++ b/css/main.css
@@ -369,6 +369,45 @@ main .container a {
   display: none;
 }
 
+footer {
+  padding: 30px 0;
+  background-color: #1c204e;
+  
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.514);
+}
+
+.footerMain {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.getApp {
+  display: flex;
+}
+
+.linkApp {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  background-color: #000;
+  margin-right: 20px;
+}
+
+.copyright {
+  color: #fff;
+}
+
+.copy {
+  color: rgb(255, 208, 0);
+  cursor: pointer;
+}
+
+.copyright span {
+  color: rgb(255, 208, 0);
+}
 
 @media screen and (max-width:730px) {
   .resTag {
@@ -433,6 +472,18 @@ main .container a {
     text-shadow: 0 0 25px rgb(255, 102, 0);
     border: 1px solid red;
   }
+
+  footer {
+    padding: 15px 0;
+  }
+
+  .footerMain {
+    flex-direction: column;
+  }
+
+  .copyright {
+    margin-top: 15px;
+  }
 }
 
 
@@ -480,11 +531,20 @@ main .container a {
     margin-right: 0;
   }
 
+  .copyright p:nth-of-type(2) {
+    font-size: 10px;
+  }
+
 }
 
 @media screen and (max-width:400px) {
   form {
     width: 170px;
+  }
+
+  .linkApp svg {
+    width: 80px !important;
+    height: 20px !important;
   }
 }
 
