--- a/css/main.css
+++ b/css/main.css
@@ -481,6 +481,10 @@ footer {
     flex-direction: column;
   }
 
+  .movie {
+    pointer-events: none;
+  }
+
   .copyright {
     margin-top: 15px;
   }
