--- a/css/movies.css
+++ b/css/movies.css
@@ -275,10 +275,9 @@
   background-color: rgb(0,0,0);
   background-color: rgba(0,0,0, 0.9); 
   overflow-x: hidden;
-  /* visibility: hidden;
+  visibility: hidden;
   opacity: 0;
-  transition: 0.5s;  */
-  display: none;
+  transition: 0.5s; 
 }
 
 .overlay iframe {
@@ -286,10 +285,9 @@
 }
 
 .openOverlay {
-  /* visibility: visible;
+  visibility: visible;
   opacity: 1;
-  transition: 0.5s;  */
-  display: block;
+  transition: 0.5s; 
 }
 
 .openOverlay iframe {
