--- a/css/main.css
+++ b/css/main.css
@@ -35,8 +35,12 @@ body::-webkit-scrollbar-thumb {
 
 
 header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   width: 100%;
   padding: 0.5rem;
+  height: 80px;
   background-color: var(--secondaryColor);
   position: fixed;
   top: 0;
@@ -64,19 +68,29 @@ header .container {
 }
 
 .logo {
-  width: 100px;
+  width: 50px;
+  height: 50px;
+}
+
+.logo a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: rgb(255, 208, 0);
+}
+
+.logo a h2 {
+  margin-left: 5px;
 }
 
 .logo img {
   width: 100%;
-  height: 70px;
+  height: 100%;
 }
 
 form {
   width: 240px;
 }
-
-
 
 .movie img {
   width: 250px;
@@ -138,7 +152,6 @@ main .container a {
   width: 100%;
 }
 
-
 .movieInfo {
   height: 65px;
   color: #fff;
@@ -171,7 +184,7 @@ main .container a {
   color: orange;
 }
 
-.movie:hover > .overview {
+.movie:hover>.overview {
   transform: translateY(0);
   transition: 0.5s ease;
 }
@@ -194,7 +207,7 @@ main .container a {
   fill: rgb(38, 0, 255);
 }
 
-.watchNow:hover > svg {
+.watchNow:hover>svg {
   animation: right 1.5s ease infinite;
   -webkit-animation: right 1.5s ease infinite;
 }
@@ -210,6 +223,7 @@ main .container a {
   justify-content: space-around;
   flex-wrap: wrap;
 }
+
 #tags .tag {
   margin: 5px 3px;
   padding: 5px 0;
@@ -244,7 +258,7 @@ main .container a {
     -moz-transition: 1.5s ease;
     -ms-transition: 1.5s ease;
     -o-transition: 1.5s ease;
-}
+  }
 }
 
 .pagination {
@@ -307,7 +321,7 @@ main .container a {
 
   .movie {
     width: 250px;
-    
+
   }
 
   .movie img {
@@ -336,7 +350,7 @@ main .container a {
 
 
 .humburger .menuBtn {
-  border: none ;
+  border: none;
   background-color: transparent;
   display: flex;
   align-items: center;
@@ -362,7 +376,7 @@ main .container a {
   margin: 0 0 10px 20px;
   font-size: 20px;
   color: rgb(255, 208, 0);
-  
+
 }
 
 .removePagination {
@@ -372,7 +386,7 @@ main .container a {
 footer {
   padding: 30px 0;
   background-color: #1c204e;
-  
+
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.514);
 }
 
@@ -476,9 +490,11 @@ footer {
   footer {
     padding: 15px 0;
   }
+
   .footerMain {
     flex-direction: column;
   }
+
   .copyright {
     margin-top: 15px;
   }
@@ -504,7 +520,7 @@ footer {
     padding: 10px 20px;
   }
 
-  main .container a{
+  main .container a {
     width: 100%;
     margin: 20px auto;
   }
@@ -516,6 +532,7 @@ footer {
   header .container {
     padding: 0 10px;
   }
+
   .movie img {
     height: 350px;
     object-fit: cover;
@@ -531,6 +548,10 @@ footer {
 
   .copyright p:nth-of-type(2) {
     font-size: 10px;
+  }
+
+  .logo a h2 {
+    display: none;
   }
 
 }
@@ -551,16 +572,6 @@ footer {
 }
 
 @media screen and (max-width:365px) {
-  .logo {
-    width: 75px;
-  }
-  .logo a img {
-    width: 100%;
-  }
-
-  .movie img {
-    height: 300px;
-  }
 
   #prev {
     margin-right: 20px;
