--- a/css/movies.css
+++ b/css/movies.css
@@ -9,7 +9,6 @@
   width: 100%;
 }
 
-
 .mainInfo {
   width: 100%;
   height: 600px;
@@ -27,7 +26,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: linear-gradient(90deg,rgba(22, 0, 82, 0.76),rgba(0, 0, 0, 0.829), rgba(0, 0, 0, 0.829), rgba(0, 0, 0, 0.829), rgba(0, 0, 0, 0.829), rgba(0, 0, 0, 0.829), rgba(0, 0, 0, 0.829), rgba(22, 0, 82, 0.76));
+  background: linear-gradient(90deg, rgba(22, 0, 82, 0.76), rgba(0, 0, 0, 0.829), rgba(0, 0, 0, 0.829), rgba(0, 0, 0, 0.829), rgba(0, 0, 0, 0.829), rgba(0, 0, 0, 0.829), rgba(0, 0, 0, 0.829), rgba(22, 0, 82, 0.76));
   top: 0;
   left: 0;
 }
@@ -53,10 +52,10 @@
 }
 
 .mainInfo img {
-    position: relative;
-    z-index: 100;
-    width: 300px;
-    height: 450px;
+  position: relative;
+  z-index: 100;
+  width: 300px;
+  height: 450px;
 }
 
 .mainInfo .textInfo {
@@ -218,7 +217,7 @@
 
 .recomodationMain {
   width: 100%;
-  padding:0 0 30px 0;
+  padding: 0 0 30px 0;
   overflow: hidden;
 }
 
@@ -226,8 +225,8 @@
   display: flex;
   align-items: center;
   overflow-x: scroll;
-  padding:10px 0 30px 0;
- 
+  padding: 10px 0 30px 0;
+
 }
 
 .recomondBlock::-webkit-scrollbar {
@@ -249,7 +248,7 @@
 }
 
 
-.recomondBlock .recDiv{
+.recomondBlock .recDiv {
   width: 200px;
   height: 270px;
   margin-right: 10px;
@@ -266,18 +265,18 @@
 
 /* The Overlay (background) */
 .overlay {
-   height: 100%;
+  height: 100%;
   width: 100%;
   position: fixed;
-  z-index: 100; 
+  z-index: 100;
   left: 0;
   top: 0;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0, 0.9); 
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
   overflow-x: hidden;
   visibility: hidden;
   opacity: 0;
-  transition: 0.5s; 
+  transition: 0.5s;
 }
 
 .overlay iframe {
@@ -287,7 +286,7 @@
 .openOverlay {
   visibility: visible;
   opacity: 1;
-  transition: 0.5s; 
+  transition: 0.5s;
 }
 
 .openOverlay iframe {
@@ -296,20 +295,21 @@
 
 .overlay-content {
   position: relative;
-  top: 25%; 
-  width: 100%; 
-  text-align: center; 
+  top: 25%;
+  width: 100%;
+  text-align: center;
 }
 
 .overlay a {
   text-decoration: none;
   font-size: 36px;
   color: #818181;
-  display: block; 
-  transition: 0.3s; 
+  display: block;
+  transition: 0.3s;
 }
 
-.overlay a:hover, .overlay a:focus {
+.overlay a:hover,
+.overlay a:focus {
   color: #f1f1f1;
 }
 
@@ -325,7 +325,7 @@
 .swiper {
   width: 100%;
   height: 100%;
-  
+
 }
 
 .swiper-slide {
@@ -345,7 +345,9 @@
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
-}.swiper-pagination-bullet {
+}
+
+.swiper-pagination-bullet {
   width: 20px !important;
   height: 20px !important;
   text-align: center;
@@ -363,7 +365,10 @@
 
 
 @media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
+  .overlay a {
+    font-size: 20px
+  }
+
   .overlay .closebtn {
     font-size: 40px;
     top: 15px;
@@ -380,15 +385,18 @@
     height: auto !important;
 
   }
+
   .textInfo {
     margin: 0 !important;
   }
 
-  .textInfo h1, h3 {
+  .textInfo h1,
+  h3 {
     text-align: center;
   }
 
-  .genre, .date {
+  .genre,
+  .date {
     margin: 10px 5px !important;
   }
 
@@ -419,7 +427,7 @@
     text-align: justify;
   }
 
-  .genreDiv  p {
+  .genreDiv p {
     margin: 4px;
     font-size: 13px;
     text-align: justify;
@@ -437,4 +445,5 @@
 
 
 }
+
 /* created by Akobir Toshtemirov */
